# federated-chatbot

./: README.md  experiment1.py  experiment2.py  experiment3.py  experiment4.py  experiment5.py  experiment6.py  pyproject.toml
config/: base_config.yaml  client_config_template.yaml
data/: preprocess.py
data/datasets/snips/: test.json  train.json
experiments/: fed.py  run.py  run_centralized.py  run_federated_ann.py  run_federated_lstm.py
models/: ann.py  lstm.py
trainer/: centralized_trainer.py  federated_client.py  federated_server.py
utils/: create_non_iid_clients.py  generate_federated_clients.py
utils.py/: config_loader.py  iid_and_non_iid_distribution.ipynb  logger.py  metrics.py
